--- a/views/show.hbs
+++ b/views/show.hbs
@@ -1,4 +1,5 @@
 <form action="/todos/{{ todo.id }}?_method=DELETE" method="POST" style="display: inline;">
+{{> message}}
   <div class="input-group">
     <div class="input-group-prepend">
       <div class="input-group-text">
